--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,14 +85,8 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+body { 
+  background: var(--foreground-rgb);
 }
 
 a {
