some header style changes

--- a/src/templates/style/headerSection.css
+++ b/src/templates/style/headerSection.css
@@ -1,9 +1,35 @@
-#header-2{border:1px solid red;
-    width: 100vw;height: 8vh;
+header{ 
+    width:100vw; height:10vh;position: fixed;
+    perspective: 1000px;
+    background-color: var(--secondary-background); 
+    transform-style: preserve-3d;overflow:hidden;
+}
+.header-shadow{box-shadow: 0 0 9px 2px var(--shadow); } 
+#header-1{
+    width: 100vw;height: 10vh;position: relative;
+    transform-origin: top ; 
+}
+#header-1 span{ 
+    width: 35%;height: 100%;padding: 3% 3%;display: flex;
+}
+#header-1 span a img{width: 100%;height: 100%;}
+.down, .up {
+    transition: transform 0.11s ease;
+}
+#header-2{
+    width: 100vw;height: 10vh;
+    transform-origin: top right; 
 }
 .btn-side-list{
     width: 50px;height: 35px;
     margin: 1% 3%;background: no-repeat center;background-size: 30px;
     background-image: url("../../../public/icons/menu-1.png");
 }
-  
+[id="header-1"].up{
+transform: rotateX(0deg);
+}
+[id="header-1"].down{transform: rotateX(90deg);}
+[id="header-2"].up{
+    transform: rotateX(180deg);
+}    
+[id="header-2"].down{transform: rotateX(90deg);}
