define index page design

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,4 +1,26 @@
 .pg-1{
     width:99vw;height:1700px;
-      /* background-color: green; */
-} 
+    margin-top:10vh; z-index: 1;
+    /* background-color: green; */
+    border:1px solid red;
+}
+.pg-1 h2{
+  margin: 7% 5% 1% 5%;
+  font-size:var(--size-2);color:  var(--icons-color);
+}
+.pg-1 h1{
+  margin-left: 5%;
+  font-size:var(--size-1);color:  var(--title-color);
+}
+
+/** domain section*/
+.domain{border: 1px solid blue;
+  width: 100%;height: 7vh;padding-left:5%;padding-right: 5%; 
+  margin-top: 1.5%; display: flex;flex-direction: row;justify-content: space-between;
+  overflow-x: scroll;
+}
+.domain span{ 
+  width: auto; height:35px; padding:2.5% 9% 2.5% 9%;margin-left:1.5%;
+  border: 1px solid var(--icons-color);border-radius: 20px;
+  color: var(--icons-color);font-size: var(--size-small);
+}
