--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,10 @@
   --secondary-background:#fff;
   --icons-color:#4c5358;
   --shadow:#41404879;
-
+  --title-color:#061011;
+  --size-small:0.7rem;
+  --size-1:1.4rem;
+  --size-2:1.2;
 
   
   --max-width: 1100px;
