--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,10 @@
   --icons-color:#4c5358;
   --shadow:#41404879;
   --title-color:#061011;
-  --size-small:0.7rem;
+  --size-small:0.9rem;
   --size-1:1.4rem;
-  --size-2:1.2;
+  --size-2:1.3rem;
+  --size-3:1.2;
 
   
   --max-width: 1100px;
