--- a/src/templates/style/productShow.css
+++ b/src/templates/style/productShow.css
@@ -1,3 +1,20 @@
  .show-p{
-    border:1px solid blue;height:160px;
+   height:180px;
+    position:relative;
+    box-shadow:3px 3px 3px 0px black;
+    /* border-top-right-radius: 30px;
+    border-top-left-radius: 30px; */
+    /* background:rgba(79, 80, 82, 0.534); */
  }
+ /* .show-p a{width: 100%;border: 1px solid rgb(234, 0, 255);} */
+ .show-p img{
+   width:100%;   height:53%; 
+}
+.show-p p{
+   font-size: var(--size-4);
+   height:20%;padding:1%;
+   /* display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;overflow:hidden; */
+   font-family: inherit;text-align: start;  
+} 
+.show-p h2{ font-size:var(--size-2);margin: 0%;}
+.show-p span{padding:1%; margin:0%; text-decoration-line: line-through; color:var(--primary-background)}
