--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
   --size-1:1.4rem;
   --size-2:1.3rem;
   --size-3:1.2;
-
+  --size-4:0.75rem;
   
   --max-width: 1100px;
   --border-radius: 12px;
