--- a/src/templates/style/productShow.css
+++ b/src/templates/style/productShow.css
@@ -1,20 +1,31 @@
  .show-p{
    height:180px;
-    position:relative;
-    box-shadow:3px 3px 3px 0px black;
-    /* border-top-right-radius: 30px;
-    border-top-left-radius: 30px; */
-    /* background:rgba(79, 80, 82, 0.534); */
- }
- /* .show-p a{width: 100%;border: 1px solid rgb(234, 0, 255);} */
- .show-p img{
-   width:100%;   height:53%; 
+   position:relative;
+   box-shadow: 0px 1px 1px 2px rgb(197, 199, 199); 
+   border-radius: 15px;
+   overflow: hidden; 
+ } 
+.show-p img{ 
+   width:100%;height:53%;margin: 0px;
+   background-color: var(--color-ground-1); 
+}
+.show-p  div{
+   width: 100%;height: 47%; padding:1% 3%; 
 }
 .show-p p{
    font-size: var(--size-4);
-   height:20%;padding:1%;
-   /* display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;overflow:hidden; */
+   height:40%; 
+   display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;overflow:hidden;
    font-family: inherit;text-align: start;  
 } 
-.show-p h2{ font-size:var(--size-2);margin: 0%;}
-.show-p span{padding:1%; margin:0%; text-decoration-line: line-through; color:var(--primary-background)}
+.show-p h2{ 
+   height:28%;
+   font-size:var(--size-2);padding-top: 1%;  }
+.show-p span#buy{ 
+   float:right;
+   position: absolute;z-index: 10;
+   width: 20%; height: 18%;top: auto;right: 5%; bottom: 3%;
+}
+.show-p:hover div{opacity: 0.7;transition: 0.6s ease-in;} 
+.show-p span svg{width: 100%;height: 100%;}
+.show-p span#second{ margin:0%;font-size: 0.7rem; text-decoration-line: line-through; color:var(--primary-background)}
