--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,6 +114,10 @@ nav span:not(.btn-active) svg:hover{opacity:0.6;transition: 0.4s ease-in;}
   margin-top:12vh;
   z-index: 1; 
 }
-
+.show-grid{ 
+  padding:2% 4%;display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-column-gap:20px;grid-row-gap:20px;
+}
 /* icons svg classes */
 .st0{fill:"#4c5358";} 
