--- a/src/app/page.css
+++ b/src/app/page.css
@@ -26,17 +26,13 @@
   width: 100%;height: 200px;border: 1px solid blue;
 }
 
-/**/
+/* show products section */
 .show{
-  width:100%;border:0px solid red;
+  width:100%;
   padding:10% 0% 20% 0%;
 }
 .show h1{opacity:0.8;font-size: var(--size-2);}
-.show > div{ 
-  padding:2% 4%;display: grid;
-  grid-template-columns: repeat(2,1fr);
-  grid-column-gap:20px;grid-row-gap:20px;
-}
+
 /* buttons*/
 .btn-background-active{background-color: var(--primary-background);color:white !important;
      border-color:var(--primary-background) !important;
