init input style

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,6 +74,7 @@ a {
   text-decoration: none;
 }
 button{ outline: none;border: 0;cursor: pointer;}
+input{outline: none;border: 0;}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
