--- a/src/app/page.css
+++ b/src/app/page.css
@@ -8,14 +8,18 @@
 }
 
 /** domain section*/
-.domain{border: 0px solid rgb(179, 255, 0);
-  width: 100%;height: 7vh;padding:2% 3%;white-space: nowrap;
-  /* padding-left:5%;padding-right: 5%;  */
+.domain{ 
+  width: 100%;height: 10vh;padding:2% 3% 5% 3%;white-space: nowrap; 
   margin: 2% 0% 2% 0%; display: flex;flex-direction: row;justify-content: space-between;
-  overflow-x: auto;overflow-y: hidden;scrollbar-width: none;
+  overflow-x: auto;overflow-y: hidden;
+  scrollbar-color: transparent transparent; 
 }
+::-webkit-scrollbar{width:50px;}
+::-webkit-scrollbar-thumb{background: transparent !important;}
+::-webkit-scrollbar-thumb:vertical{background: transparent !important;}
+::-webkit-scrollbar-track{background: transparent !important;} 
 .domain span{ 
-  width: auto; height:35px;  
+  width: auto;  
   padding:3% 5% 7% 5%;margin-left:1.5%;
   border: 2px solid #41404879;border-radius: 20px;
   color: var(--icons-color);font-size: var(--size-small);
@@ -23,13 +27,15 @@
 
 /* slider section*/
 .slider{
-  width: 100%;height: 200px;border: 1px solid blue;
+  width: 105%;height: 220px;margin-top:5%;
+  border-top-left-radius: 30px;border-bottom-left-radius: 30px;
+ background-color: var(--primary-background);
 }
 
 /* show products section */
 .show{
-  width:100%;
-  padding:10% 0% 20% 0%;
+  width:100%; 
+  padding:1% 0% 20% 0%;
 }
 .show h1{opacity:0.8;font-size: var(--size-2);}
 
