--- a/src/app/page.css
+++ b/src/app/page.css
@@ -27,11 +27,67 @@
 
 /* slider section*/
 .slider{
-  width: 105%;height: 220px;margin-top:5%;
-  border-top-left-radius: 30px;border-bottom-left-radius: 30px;
- background-color: var(--primary-background);
-}
+  width: 105%;height: 300px;margin-top:5%;
+  border-top-left-radius: 30px;border-bottom-left-radius: 30px; 
+  position:relative;display:block;
+  background-color: var(--primary-background);
+ box-shadow: 6px 0px 6px  rgb(27, 31, 32);
 
+}
+.slider img{
+   border:0px solid white;  
+  width:65% ;height: 70%;margin:10% 3% ;position: absolute;z-index: 5;
+  /* shadow: 1px 3px 2px 0px black;
+   */
+   filter: drop-shadow(1px 1px 1px rgb(97, 95, 95));
+}
+.slider > div{
+  width: 100%;height: 100%; 
+  position: absolute;z-index: 8;
+  display: grid;grid-template-rows: 1fr 2.5fr 0.5fr;grid-template-columns: 1fr 0.3fr;
+}
+.slider > div section{
+  width: 90%;padding: 5% 5%; 
+}
+.slider > div section h1{
+  font-size: var(--size-1);color: var(--secondary-background);
+  text-shadow: 4px 0px 4px  rgb(27, 31, 32);
+}
+.slider > div section span{
+  font-size: var(--size-3);color: var(--secondary-background);opacity: 0.9;
+}
+.slider > div > span:nth-child(3){grid-column: 1;grid-row: 3;
+  width:140px;height:50px;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+  border: 3px solid var(--secondary-background);
+  margin: 5px;
+ box-shadow: 1px 0px 4px  rgb(27, 31, 32);
+}
+.slider > div > span svg{
+  width: 80px;height: 40px;
+}
+.slider > div > span:nth-child(2){
+  width: 50px;height:120px;padding: 2% 0% 2% 0%; border-radius: 20px;
+  flex-direction: column;
+  background-color: var(--secondary-background);
+  box-shadow: 2px 0px 4px  rgb(27, 31, 32); 
+  grid-column: 2;grid-row: 2;place-self: center;
+}
+.slider >div >span:nth-child(2) h2{
+ padding: 10%;height: 100%;
+  font-size: var(--size-1);color: var(--icons-color);height: 100%;
+}
+.slider >div >span:nth-child(2) button{
+  width: 70%;height: 100%;border-radius: 10px;
+  box-shadow: 2px 2px 4px   rgb(107, 119, 122);
+  color:var(--secondary-background);
+  background-color: transparent;border: 0px;
+  font-size: var(--size-2);
+}
+.btn-des{
+  height: 30% !important;
+  box-shadow: 0px 0px 0px 0px !important;color: black !important;}
 /* show products section */
 .show{
   width:100%; 
