--- a/src/app/contact/page.css
+++ b/src/app/contact/page.css
@@ -12,14 +12,14 @@
 }
 .pg-4 p:nth-child(4){opacity: 0.6;color:red}
 .pg-4 div{ 
-    height: 15vh; width: 100%;
+    height: 100px; width: 100%;
     display: grid;grid-template-columns: 1fr 1fr;grid-template-rows: 1fr 1fr;place-items: center;
     background-color: var(--primary-background);
 }
 .pg-4 div label{
     background-color: var(--secondary-background);
-    border-radius: 20px;margin-top: 10%; 
-    width: 40vw;height: 80%;
+    border-radius: 20px;margin-top: 60px; 
+    width: 40vw;height: 140px;
     box-shadow: 2px 1px 3px 1px var(--shadow) ;
     flex-direction:column;
 }
