--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,6 +105,7 @@ nav span:not(.btn-active) svg:hover{opacity:0.6;transition: 0.4s ease-in;}
 }
 .btn-active svg,.btn-active svg g{fill:var(--primary-background);stroke:var(--primary-background);}
 .btn-active-ground{background-color: var(--primary-background) !important;}
+.btn-active-ground-w{background-color: var(--primary-background) !important;color:var(--secondary-background) !important;}
 /* position */
 .p-bottom{  position: fixed;bottom: 0;z-index: 10;}
 .center{display: flex;align-items: center;justify-content: center;}
@@ -122,5 +123,13 @@ nav span:not(.btn-active) svg:hover{opacity:0.6;transition: 0.4s ease-in;}
   grid-template-columns: repeat(2,1fr);
   grid-column-gap:20px;grid-row-gap:20px;
 }
+.scrolling{
+  overflow-x: auto;overflow-y: hidden;
+  scrollbar-color: transparent transparent; 
+}
+::-webkit-scrollbar{width:50px;}
+::-webkit-scrollbar-thumb{background: transparent !important;}
+::-webkit-scrollbar-thumb:vertical{background: transparent !important;}
+::-webkit-scrollbar-track{background: transparent !important;} 
 /* icons svg classes */
 .st0{fill:"#4c5358";} 
