--- a/src/app/products/[productId]/page.css
+++ b/src/app/products/[productId]/page.css
@@ -1,33 +1,34 @@
 .pg-5{
   /* background-color:  red; */
-    width: 100vw ;height: 100vh;
+    width: 100vw ;height: 90vh;
     position:relative;
-    padding-bottom:30vh;
+    /* padding-bottom:30vh; */
  /* z-index: 20; */
  /* position: absolute; */
 }
 .pg-5 section:nth-child(1){
-    width: 100%;height:60vh;
-      border: 0px solid rgb(151, 235, 17);
+    width: 100%;height:45%;
+      border: 0px solid rgb(142, 155, 122);
       position: relative;
 }
 .pg-5 section:nth-child(1) div:nth-child(1){
-    width: 100vw;height: 100%;
+    width: 100vw;height: 90%;
     border-radius: 50%;
     border-bottom-right-radius:48%;
-    transform: translate(20%,-10%);
+    transform: translate(35%,-10%);
     float: right;
     background-color: var(--primary-background);
     box-shadow: 1px 1px 1px 3px rgba(33, 37, 39, 0.897);
 }
 .pg-5 section:nth-child(1) div:nth-child(2){
-   width: 85%;height: 300px;
+    border: 0px solid rgb(60, 255, 0);
+    width: 75%;height: 80%;
    position: absolute;z-index: 10;
-   top:5%;right: 10px;
+   top:5%;right: 5%;
    display: flex; float: right;
 }
 .pg-5 section:nth-child(1) div:nth-child(2) img{
-    /* border: 1px solid yellow; */
+    border: 0px solid yellow;
     width: 100%;height: 100%;
 }
 .pg-5 section:nth-child(1) div:nth-child(3){
@@ -43,8 +44,8 @@
     width: 60px !important;background-color:  #1b1816 !important;
 }
 .pg-5 section:nth-child(2){
-    width: 100%;height: 300px;
-    padding: 1% 4%;
+    width: 100vw;height: 30%;
+    padding: 1% 4% 4%  4%; 
      /* background-color: rgb(0, 255, 21); */
 }
 .pg-5 section:nth-child(2) h1{
@@ -53,7 +54,7 @@
 .pg-5 section:nth-child(2) p{
     width: 90%;
     font-size: var(--size-3);color: var(--icons-color);
-    text-align: justify;
+    text-align:left;
 }
 .pg-5 section:nth-child(2) > div{
     margin-top: 5%;
@@ -75,8 +76,8 @@
     width: 100%;
 }
 .pg-5 section:nth-child(2) > div h2{
-    width:50%;height: 10px;margin: auto; text-align: right;
-    font-size: var(--size-1);
+    width:50%;height: 90%;margin: auto; text-align: right;
+    font-size: var(--size-1);border: 0px solid white;
     
 }
 .pg-5 section:nth-child(2) > button{
