--- a/src/app/products/[productId]/page.css
+++ b/src/app/products/[productId]/page.css
@@ -1,13 +1,14 @@
 .pg-5{
   /* background-color:  red; */
-    width: 100vw ;height: 90vh;
+    width: 100vw ;height: 100vh;
     position:relative;
     /* padding-bottom:30vh; */
  /* z-index: 20; */
- /* position: absolute; */
+    border: 0px solid red;
+    /* position: absolute; */
 }
 .pg-5 section:nth-child(1){
-    width: 100%;height:45%;
+    width: 100%;height:45vh;
       border: 0px solid rgb(142, 155, 122);
       position: relative;
 }
@@ -44,16 +45,19 @@
     width: 60px !important;background-color:  #1b1816 !important;
 }
 .pg-5 section:nth-child(2){
-    width: 100vw;height: 30%;
+    width: 100vw;height: 42vh;
     padding: 1% 4% 4%  4%; 
+   
+    margin-top: 3vh;
      /* background-color: rgb(0, 255, 21); */
 }
-.pg-5 section:nth-child(2) h1{
+.pg-5 section:nth-child(2) h1{ border:0px solid blue;
+    width: 100%;
     font-size: var(--size-1);color: var(--title-color);
 }
 .pg-5 section:nth-child(2) p{
-    width: 90%;
-    font-size: var(--size-3);color: var(--icons-color);
+    width: 100%;margin-top:5px;
+   font-size: var(--size-3); color: var(--icons-color);
     text-align:left;
 }
 .pg-5 section:nth-child(2) > div{
@@ -75,16 +79,38 @@
 .pg-5 section:nth-child(2) > div h3{
     width: 100%;
 }
-.pg-5 section:nth-child(2) > div h2{
-    width:50%;height: 90%;margin: auto; text-align: right;
-    font-size: var(--size-1);border: 0px solid white;
-    
+.pg-5 section:nth-child(2) > div section{
+   width:50%;height: 100%; margin-top: 5px;
 }
-.pg-5 section:nth-child(2) > button{
+.pg-5 section:nth-child(2) > div section span{
+    text-decoration: line-through;color:red;
+   width: 100%;  height: 30px; border: 0px solid blue;
+   text-align: right;font-size: var(--size-4);
+}
+.pg-5 section:nth-child(2) > div section h2{
+    width: 100%;height: 90%;   margin: auto; text-align: right;
+    font-size: var(--size-1);border: 0px solid rgb(252, 38, 38);
+}
+
+.pg-5 section:nth-child(2) > button svg{
+    height:100%;
+}
+.pg-5 section:nth-child(3){
+    width: 100vw;height:10vh;border:0px solid green;padding:0px;
+}
+.pg-5 section:nth-child(3) > button{
     background-color: var(--primary-background);
-    width: 160px;height: 45px;border-radius: 6px;
-    margin: 5% 3%;
+    width: 75%;height: 45px;border-radius: 6px;
+    margin: 1%;
+    font-size: var(--size-1);
     color: var(--secondary-background);
-    box-shadow: 2px 2px 3px  black;float: right;
+    box-shadow: 2px 2px 3px  black; 
+
+}
+.pg-5 section:nth-child(3) > span{ 
+    width: 20%;height: 45px;float: right;
+}
+.pg-5 section:nth-child(3) > span a svg{
+    width:60%;height:45px;
 
 }
