--- a/src/app/cart/confirm/page.css
+++ b/src/app/cart/confirm/page.css
@@ -3,7 +3,7 @@
 }
 .pg-form{
     width: 95%;height: 100%;padding: 2%;
-    display: flex;flex-direction: column;
+    display: flex;flex-direction: column;justify-content: flex-start;
     /* box-shadow: 1px 1px 1px 2px rgb(52, 68, 68); */
     /* border-radius: 20px; */
 }
@@ -22,6 +22,7 @@
     margin-top: 8px;
     border: 2px solid var(--shadow);
 } 
+.pg-form form label:nth-child(1),.pg-form form label:nth-child(2){width: 48%;}
 .pg-form form label:nth-child(5){
     height: 70px;justify-content: space-between;
     border: 0px;margin-bottom: 15px;
