--- a/src/app/contact/page.css
+++ b/src/app/contact/page.css
@@ -1,12 +1,507 @@
+html{scroll-behavior: smooth; background-color: var(--primary-background) !important;}
+header{ background-color: var(--primary-background) !important;}
+@media(max-width:576px){
+    .pg-4{ 
+        width: 100vw;height: auto;  
+    }
+    /* .pg-4 > div{
+        width: 100%;height: auto;border: 1px solid red;
+    } */
+    .pg-4  div:nth-child(1){
+        width: 100%;height: 30vh;
+        /* padding: 1% 0%;  */
+        /* gap:5px; */
+    }
+    .pg-4 div:nth-child(1) div{
+        width: 50%;height: 100%;left:45%;
+            padding:0% 1% 0% 3%; 
+    }
+    .pg-4 div:nth-child(1) > svg{
+        width: 100%;height: 5vh;
+    }
+    .pg-4 div:nth-child(1) div h1{
+            font-size: 1.1rem;
+            /* margin-top: 3%;margin-bottom: 3%; */
+    }
+    .pg-4 div:nth-child(1) div p{
+        width:100%;margin: 0px;
+        font-size: 0.5rem; 
+    }
+    .pg-4 div:nth-child(1) section{ 
+        width: 30%;height:85%;
+        border-radius: 15px;
+        left: 10%;
+        transform: rotateX(51deg) rotateZ(50deg);
+
+    }
+    .pg-4 div:nth-child(1) section svg{
+        width:80%;height: 95%;
+        transform: rotateX(-90deg) rotateY(60deg) translateY(0%)   translateX(40%);
+    }
+    .pg-4  div:nth-child(1) span{
+        width: 100px;height: 40px;
+        font-size: 0.6rem;
+        border-radius: 19px;
+    }
+    .pg-4 div.menu{
+        width: 100%;height: 60px;gap: 8px;padding: 1% 0%;
+    }
+    .pg-4 div.menu button{
+        width: 80px;height: 50px;padding: 5px 0px;
+    }
+    .pg-4 div.menu button svg{
+            width: 60px;height: 30px;
+    }
+    .pg-4  div:nth-child(4){
+        width:100%;height: auto;
+       
+    } 
+    .pg-4  div:nth-child(4)  section{
+        width: 100%;height: auto; 
+        padding: 2%;  
+    }
+    .pg-4  div:nth-child(4)   section hr{
+        width: 65%;height: 5px;margin: 4% 0%;border-radius: 16px;
+    }
+    .pg-4  div:nth-child(4)   section p{
+       font-size: 0.6rem;
+       padding: 0% 3%;
+    }
+    .pg-4  div:nth-child(4)  section li {
+        font-size: 0.6rem;
+        padding: 1% 3%;
+     }
+     .pg-4  div:nth-child(4) section h3{
+        width: 100%;padding: 1% 3%;
+        font-size: 0.85rem;
+     }
+     .pg-4  div:nth-child(4) section  h1{
+        font-size: 1.1rem;margin: 1% 3%;
+     }
+    .pg-4  div:nth-child(4) section .space{
+        height: 100px; width: 100%; gap: 15px;
+    }
+    .pg-4  div:nth-child(4) section .space label{
+        border-radius: 20px;
+        margin-top: 80px; 
+        width: 40vw;height:150px; 
+    }
+    .pg-4 div label svg{width:65%;height: 45%;}
+    .pg-4  div:nth-child(4) section .space span{
+        width:80%;
+        font-size: 10px; 
+    }
+    .pg-4  div:nth-child(4) section .social-media{
+        width: 100%;height: 10vh;
+        margin-top:15vh; 
+         gap: 10px;
+    }
+    .pg-4  div:nth-child(4) section .social-media a{
+        border-radius: 50; 
+        width:40px;
+        height: 40px; 
+    }
+    .pg-4  div:nth-child(4) section .social-media a svg{width: 100%;}
+
+}
+@media(min-width:576px){
+    .pg-4{ 
+        width: 100vw;height: auto;  
+    }
+    /* .pg-4 > div{
+        width: 100%;height: auto;border: 1px solid red;
+    } */
+    .pg-4  div:nth-child(1){
+        width: 100%;height: 40vh; 
+        /* padding: 1% 0%;  */
+        gap:5px;
+    }
+    /* .pg-4  > svg{
+        width: 100vw;height: 20vh;
+    } */
+    .pg-4 div:nth-child(1) div{
+        width: 50%;height: 100%;left:45%;
+            padding:0% 1% 0% 3%; 
+    }
+    .pg-4 div:nth-child(1) div h1{
+            font-size: 1.3rem; 
+            /* margin-top: 3%;margin-bottom: 3%; */
+    }
+    .pg-4 div:nth-child(1) div p{
+        width:90%;
+        font-size: 0.7rem; 
+    }
+    .pg-4 div:nth-child(1) section{ 
+        width: 30%;height:90%;
+        border-radius: 15px;
+        left: 10%;
+        transform: rotateX(51deg) rotateZ(50deg);
+    }
+    .pg-4 div:nth-child(1) section svg{
+        width:60%;height: 75%;
+        transform: rotateX(-90deg) rotateY(60deg) translateY(0%)   translateX(40%);
+    }
+    .pg-4  div:nth-child(1) span{
+        width: 100px;height: 40px;
+        font-size: 0.6rem;
+        border-radius: 19px;
+    }
+    .pg-4 div.menu{
+        width: 100%;height: 70px;
+    }
+    .pg-4 div.menu button{
+        width: 80px;height: 50px;padding: 5px 0px;
+    }
+    .pg-4 div.menu button svg{
+            width: 50px;height: 30px;
+    }
+    .pg-4  div:nth-child(4){
+        width:100%;height: auto;
+       
+    } 
+    .pg-4  div:nth-child(4)  section{
+        width: 100%;height: auto; 
+        padding: 2%;  
+    }
+    .pg-4  div:nth-child(4)   section hr{
+        width: 65%;height: 5px;margin: 4% 0%;border-radius: 16px;
+    }
+    .pg-4  div:nth-child(4)   section p{
+       font-size: 0.6rem;
+       width: 85%;
+       padding: 0% 3%;
+    }
+    .pg-4  div:nth-child(4)  section ul{
+        width: 80%;
+    }
+    .pg-4  div:nth-child(4)  section li {
+      
+        font-size: 0.6rem;
+        padding: 1% 5%;
+     }
+     .pg-4  div:nth-child(4) section h3{
+        width: 85%;padding: 1% 3%;
+        font-size: 0.85rem;
+     }
+     .pg-4  div:nth-child(4) section  h1{
+        font-size: 1.3rem;margin: 1% 3%;
+     }
+     .pg-4  div:nth-child(4) section .space{
+        height: 100px; width: 100%; gap: 15px;
+    }
+    .pg-4  div:nth-child(4) section .space label{
+        border-radius: 20px;
+        margin-top: 15%; 
+        width: 30vw;height:170px; 
+    }
+    .pg-4 div label svg{width:65%;height: 45%;}
+    .pg-4  div:nth-child(4) section .space span{
+        width:80%;
+        font-size: 10px; 
+    }
+    .pg-4  div:nth-child(4) section .social-media{
+        width: 100%;height: 10vh;
+        margin-top:25vh; 
+         gap: 10px;
+    }
+    .pg-4  div:nth-child(4) section .social-media a{
+        border-radius: 50; 
+        width:40px;
+        height: 40px; 
+    }
+    .pg-4  div:nth-child(4) section .social-media a svg{width: 100%;}
+}
+@media(min-width:880px){
+    .pg-4{ 
+        width: 100vw;height: auto;  
+    }
+    /* .pg-4 > div{
+        width: 100%;height: auto;border: 1px solid red;
+    } */
+    .pg-4  div:nth-child(1){
+        width: 100%;height: 30vh; 
+        /* padding: 1% 0%;  */
+        gap:5px;
+    }
+    /* .pg-4  > svg{margin: 0px;border: 1px solid black;
+        
+    } */
+    .pg-4 div:nth-child(1) div{
+        width: 45%;height: 100%;left:43%;
+            padding:0% 3% 0% 1%; 
+    }
+    .pg-4 div:nth-child(1) div h1{
+            font-size: 1.3rem; 
+            /* margin-top: 3%;margin-bottom: 3%; */
+    }
+    .pg-4 div:nth-child(1) div p{
+        width:90%;
+        font-size: 0.7rem; 
+    }
+    .pg-4 div:nth-child(1) section{ 
+        width: 15%;height:120%;
+        border-radius: 15px;
+        left: 25%;
+        transform: rotateX(51deg) rotateZ(50deg);
+    }
+    .pg-4 div:nth-child(1) section svg{
+        width:80%;height: 75%;
+        transform: rotateX(-90deg) rotateY(70deg) translateY(0%)   translateX(25%);
+    }
+    .pg-4  div:nth-child(1) span{
+        width: 100px;height: 40px;
+        font-size: 0.6rem;
+        border-radius: 19px;
+    }
+    .pg-4 div.menu{
+        width: 100%;height: 70px;
+    }
+    .pg-4 div.menu button{
+        width: 80px;height: 50px;padding: 5px 0px;
+    }
+    .pg-4 div.menu button svg{
+            width: 50px;height: 30px;
+    }
+    .pg-4  div:nth-child(4){
+        width:100%;height: auto;
+       
+    } 
+    .pg-4  div:nth-child(4)  section{
+        width: 100%;height: auto; 
+        padding: 2%;  
+    }
+    .pg-4  div:nth-child(4)   section hr{
+        width: 65%;height: 5px;margin: 4% 0%;border-radius: 16px;
+    }
+    .pg-4  div:nth-child(4)   section p{
+       font-size: 0.6rem;
+       width: 85%;
+       padding: 0% 3%;
+    }
+    .pg-4  div:nth-child(4)  section ul{
+        width: 80%;
+    }
+    .pg-4  div:nth-child(4)  section li {
+      
+        font-size: 0.6rem;
+        padding: 1% 5%;
+     }
+     .pg-4  div:nth-child(4) section h3{
+        width: 85%;padding: 1% 3%;
+        font-size: 0.85rem;
+     }
+     .pg-4  div:nth-child(4) section  h1{
+        font-size: 1.3rem;margin: 1% 3%;
+     }
+     .pg-4  div:nth-child(4) section .space{
+        height: 100px; width: 100%; gap: 15px;
+    }
+    .pg-4  div:nth-child(4) section .space label{
+        border-radius: 20px;
+        margin-top: 15%; 
+        width: 20vw;height:180px; 
+    }
+    .pg-4 div label svg{width:65%;height: 45%;}
+    .pg-4  div:nth-child(4) section .space span{
+        width:80%;
+        font-size: 10px; 
+    }
+    .pg-4  div:nth-child(4) section .social-media{
+        width: 100%;height: 10vh;
+        margin-top:30vh; 
+         gap: 10px;
+    }
+    .pg-4  div:nth-child(4) section .social-media a{
+        border-radius: 50; 
+        width:40px;
+        height: 40px; 
+    }
+    .pg-4  div:nth-child(4) section .social-media a svg{width: 100%;}
+}
 .pg-4{ 
-    width: 100vw;padding-bottom: 12vh;
+    /* width: 100vw;padding-bottom: 12vh; */
+     
+    position: relative;
+    display: flex; flex-direction: column;
+    
 }
-.pg-4 h1{
-    font-size: var(--size-1);color: var(--icons-color);
+ 
+.pg-4  div:nth-child(1){ 
+    /* z-index: 5; */
+    display:flex;
+    flex-direction: row; 
+    position: relative;
+    background: var(--primary-background) ; 
+}
+.pg-4 div:nth-child(1) div{
+/* width: 50%;height: 80%;left:50%; */
+border: 0px solid white;
+position: relative !important; 
+flex-direction: column;
+
+}
+/* .pg-4  div:nth-child(1):before{
+    content: "";
+    display: block;
+    position: absolute;
+    border-radius: 100% 40%;
+    width: 100%;height: 80px;
+    top: 50px;right: -5px;
+    background-color: white;
+}
+.pg-4  div:nth-child(1):after{
+    content: '';
+    display: block;
+    position: absolute;
+    border-radius: 100% 40%;
+    background-color: red !important;
+    width: 100%;height: 100%;
+    left: 0;top: 30px;
+
+    
+} */
+.pg-4 div:nth-child(1) div h1{
+    color: var(--secondary-background);
+    border:0px solid black;
+}
+.pg-4 div:nth-child(1) div p{
+    color: var(--secondary-background);
+    opacity: 0.88; border:0px solid black;
+    text-align: start;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-shadow:0px 0px 5px 0px rgba(34,33,81,0.01), 28px 28px 28px 0px rgba(34,33,81,0.25);
+
+}
+.pg-4 div:nth-child(1) section{
+    background-color: var(--primary-background);
+    position: absolute;
+    /* bottom: 1px;  */
+    transform-style: preserve-3d;
+     /* border: 9px solid  transparent; */
+     --m:rgb(255, 255, 255);
+    border-bottom: 5px solid var(--m);
+    border-top: 5px solid  var(--m); 
+    border-right: 5px solid var(--m);  
+    box-shadow:1px 1px 0px 1px rgba(34,33,81,0.01), 28px 28px 28px 0px rgba(34,33,81,0.25);
+    transition:  .4s ease-in-out transform, .4s ease-in-out box-shadow;
+}
+.pg-4 div:nth-child(1) section svg{
+    /* width:80%;height: 95%;
+    transform: rotateX(-90deg) rotateY(60deg) translateY(0%)   translateX(40%); */
+    /* border: 1px solid white; */
+    transform-style: preserve-3d;
+    transform-origin: bottom ; stroke: var(--secondary-background);fill: var(--secondary-background);
+    /* filter: drop-shadow(1px 3px 2px   rgb(62, 69, 78));
+     */
+     /* filter: drop-shadow(5px 5px 5px  rgba(34,33,81,0.25)); */
+    /* box-shadow:1px 1px 0px 1px rgba(34,33,81,0.01), 28px 28px 28px 0px rgba(34,33,81,0.25); */
+  
+
+    /* transform: rotateX(1deg) rotateY(60deg) rotateZ(-50deg)  translateZ(20px) translateY(-70px)  ; */
+}
+.pg-4  div:nth-child(1) span{
+    color: var(--secondary-background);
+    background-color: rgb(52,68,68);
+    box-shadow: 0px 0px 3px rgb(150, 148, 148);
+    cursor: pointer;
+}
+.pg-4  div:nth-child(1) span a{
+    width: 100%;height: 100%;display: flex;
+}
+.pg-4  div:nth-child(1) span a:target{
+    background-color: red !important;
+}
+.pg-4 div.menu{ 
+   /* background-color: rgba(255, 255, 255, 0.24); */
+   background-color: var(--primary-background);
+}
+.pg-4 div.menu button{
+    /* display: flex;align-items:flex-end;justify-content: center; */
+    color: var(--icons-color);
+    background-color:transparent; 
+    color: var(--secondary-background);
+    &:hover{
+       color: var(--primary-background); 
+    }
+}
+.pg-4 div.menu button svg{
+    fill:white !important;stroke: var(--secondary-background) !important;
+}
+.pg-4  div:nth-child(4){
+    /* position: absolute;z-index: 2; */
+    z-index: 5;  
+    /* display: flex; */
+    /* overflow: hidden; */
+    flex-direction:column; position: relative;
+    /* overflow: hidden; */
+    /* 
+    transform-origin: center center; */
+    /* perspective-origin: bottom ; */
+    /* transform-style: preserve-3d;   */ 
+    /* perspective: 100%; */
+}
+/* .pg-4 div:nth-child(2) div{
+    overflow: hidden;
+     transform-style: preserve-3d; 
+     position: relative; 
+    transform-origin: bottom  ;
+       transform: rotateX(-90deg); 
+        transition: transform 1s ease;
+} */
+   
+.pg-4  div:nth-child(4) section{transition: transform 1s;flex-direction: column;   }
+.pg-4  div:nth-child(4) section hr{ background-color:var(--primary-background);border: 0px;}
+
+.pg-4  div:nth-child(4) section.contact{padding: 0% !important;}
+.pg-4  div:nth-child(4)   section li{
+    text-align: justify;
+    list-style-type: square;
+} 
+.pg-4  div:nth-child(4)   section h3{
+   text-align: justify;
+}
+.pg-4  div:nth-child(4)   section h3{
+        text-align: start; 
+}
+.pg-4  div:nth-child(4) section .space{
+    /* height: 100px; width: 100%; gap: 15px; */
+    /* display: grid; */
+    /* grid-template-columns: 1fr 1fr;grid-template-rows: 1fr 1fr;
+    place-items: center; */
+   
+    background-color: var(--primary-background);
+    position: relative;
+}
+.pg-4  div:nth-child(4) section .space label{
+ 
+    /* border-radius: 20px;
+    margin-top: 80px; 
+    width: 40vw;height:120px;  */
+    box-shadow: 2px 1px 3px 1px var(--shadow) ;
+    background-color: var(--secondary-background);
+    flex-direction:column;
+}
+.pg-4  div:nth-child(4) section .space span{
+    /* width:80%;
+    font-size: 10px;  */
+    box-sizing: border-box;
+    color: var(--title-color);text-align: center;
+}
+.pg-4  div:nth-child(4) section .social-media{
+    /* width: 100%;height: 10vh;
+    margin-top:15vh; 
+     gap: 10px; */
+    position: relative;
+    flex-direction: row;  
+}
+
+.pg-4  div:nth-child(4) section .social-media a:hover{opacity: 0.7;transition: 0.66s ease-out;}
+.pg-4  div:nth-child(4) section  h1{
+    /* font-size: var(--size-1);
     padding:0% 3% 0% 3%;
-    margin-top: 3%;margin-bottom: 3%;
+    margin-top: 3%;margin-bottom: 3%; */
+    color: var(--icons-color); 
 }
-.pg-4 p{
+/* .pg-4 p{
     padding:0% 7% 0% 7%;color: black;
     font-size:var(--size-4);text-align: justify;
 }
@@ -36,4 +531,16 @@
     border-radius: 50;margin:10px;
     width:40px;height: 40px;
 }
-.pg-4 section a:hover{opacity: 0.7;transition: 0.66s ease-out;}
+.pg-4 section a:hover{opacity: 0.7;transition: 0.66s ease-out;} */
+/* @keyframes anim {
+    0%{
+       transform:perspective(100vw) rotateX(0deg) !important;
+         
+    }
+    50%{
+        transform:perspective(100vw) rotateX(90deg) !important; 
+    }
+    100%{
+        transform:perspective(100vw) rotateX(180deg) !important;
+    }
+} */ 
