--- a/src/app/dashboard/clients/[id]/page.css
+++ b/src/app/dashboard/clients/[id]/page.css
@@ -2,20 +2,20 @@
     .cl-1{width: 100%;height: auto;min-height: 90vh;margin-top: 10vh;}
     .cl-1-2{width: 100%;height: 40vh;padding: 0% 3% 1%;}
     .cl-1-2 > h1{width: 50%; height: 60px;gap: 5px;font-size: 0.8rem;padding:3% 1%;}
-    .cl-1-2 h1 label{width: 55px;height: 55px;border-radius: 50%; font-size: 1rem;}
+    .cl-1-2 h1 label{width: 45px;height: 45px;border-radius: 50%; font-size: 1rem;}
     .cl-1-2 p{font-size: 0.6rem;width: 30%;height: 40px;border-radius: 20px;padding: 0% 1%;}
     .cl-1-2 p a{padding:0% 2%;}
     .cl-1-2 div{width: 85%; height:100px;gap: 5%;  margin: 5% auto 5% auto;}
     .cl-1-2 div section{width:30%;height:100%;}
     .cl-1-2 div section span{font-size: 0.8rem;height: 20%;}
-    .cl-1-2 div section h1{height: 40%; font-size: 1.5rem;padding:0% 1%;}
+    .cl-1-2 div section h1{height: 40%; font-size: 1.5rem;padding:0% 1.5%;border-radius: 7px; }
     .cl-1-2 div section svg{width:40px; height:40%;margin-top: 2%;}
     /* .cl-1 > svg{height: 25vh;} */
-    .cl-1-3{width: 75%;height: 460px;border-radius: 10px;
+    .cl-1-3{width: 75%;height: 475px;border-radius: 10px;
         transform: translateY(-30%);
         padding:5% 4% 5% 3%;
     }
-    .cl-1-3 h2{font-size: 0.7rem;}
+    .cl-1-3 h2{font-size: 0.7rem;padding: 0% 0% 1%;}
     .cl-1-3 h3{font-size: 0.55rem;padding: 1% 0%;}
     .cl-1-3 label{ font-size: 0.55rem;gap: 5px;}
     .cl-1-3 label svg{ width: 25px;height: 30px;border: 0px solid black;}
@@ -46,7 +46,7 @@
     color: var(--secondary-background);
     margin-left: auto;
     place-self: center;display: flex;
-    box-shadow:0px 0px 3px rgb(104, 100, 100);
+    /* box-shadow:0px 0px 3px rgb(104, 100, 100); */
 }
 .cl-1-2 h1 > label{box-shadow:0px 0px 3px rgb(104, 100, 100);color:var(--secondary-background);}
 .cl-1-2 div{ 
@@ -56,9 +56,9 @@
 }
 .cl-1-2 div > section{border:0px solid rgb(87, 214, 3);display: flex;flex-direction: column;}
 .cl-1-2 div > section:nth-child(3){float: right;}
-.cl-1-2 div > section h1{ border:0px solid black;color: var(--secondary-background);}
-.cl-1-2 div > section:nth-child(1) h1{background-color: rgba(229, 255, 0, 0.733);}
-.cl-1-2 div > section:nth-child(2) h1{background-color: rgba(255, 81, 0, 0.966);}
+.cl-1-2 div > section h1{border:0px solid black;color: var(--secondary-background);box-shadow: 0px 0px 4px rgb(141, 134, 134);}
+.cl-1-2 div > section:nth-child(1) h1{background-color: rgba(255, 208, 0, 0.966);}
+.cl-1-2 div > section:nth-child(2) h1{background-color: rgb(255, 60, 0);}
 .cl-1-2 div > section:nth-child(3) h1{background-color: rgba(21, 255, 0, 0.877);}
 
 .cl-1-2 div > section  span{color: var(--secondary-background);border: 0px solid white;padding: 0px;}
